fixed navbar dropdown z-index

--- a/rpgine_comapp_danceofdragons/static/danceofdragons/css/dashboard.css
+++ b/rpgine_comapp_danceofdragons/static/danceofdragons/css/dashboard.css
@@ -4,6 +4,7 @@ body {
 
 .navbar-nav > li > .dropdown-menu {
     background-color: #222222;
+    z-index: 150;
 }
 
 .navbar-nav > li > .dropdown-menu a {
@@ -121,5 +122,5 @@ ol.breadcrumb > li > a {
     margin-left: 175px;
     width: 100%;
     background-color: #000000;
-    z-index: 4000;
+    z-index: 100;
 }
